ajustes finais
Alterado avatar para valor. Alterado header param para query param. Retirado array do swagger
