# servidor/licenca/src/main/java/br/com/licenca/controller/LicencaController.java
@@ -5,7 +5,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
@@ -22,7 +22,7 @@ public class LicencaController {
     LicencaBusiness licencaBusiness;
 
     @RequestMapping(value = "/licenca", method = RequestMethod.GET, produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<LicencaResponse> solicitarLicenca(@RequestHeader Integer usuarioId) throws PreConditionFailedException {
+    public ResponseEntity<LicencaResponse> solicitarLicenca(@RequestParam Integer usuarioId) throws PreConditionFailedException {
     	try {
             String licencaCodigo = licencaBusiness.solicitarLicenca(usuarioId);
             return new ResponseEntity<LicencaResponse>(new LicencaResponse(licencaCodigo), HttpStatus.OK);
@@ -32,7 +32,7 @@ public class LicencaController {
     }
 
     @RequestMapping(value = "/licenca/renovar", method = RequestMethod.PATCH, produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<Void> renovarLicenca(@RequestHeader Integer usuarioId, @RequestHeader String licencaCodigo) {
+    public ResponseEntity<Void> renovarLicenca(@RequestParam Integer usuarioId, @RequestParam String licencaCodigo) {
     	try {
             licencaBusiness.renovarLicenca(usuarioId, licencaCodigo);
             return new ResponseEntity<Void>(HttpStatus.NO_CONTENT);
@@ -42,7 +42,7 @@ public class LicencaController {
     }
 
     @RequestMapping(value = "/licenca/devolver", method = RequestMethod.DELETE, produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<Void> devolverLicenca(@RequestHeader Integer usuarioId, @RequestHeader String licencaCodigo) {
+    public ResponseEntity<Void> devolverLicenca(@RequestParam Integer usuarioId, @RequestParam String licencaCodigo) {
         try {
             licencaBusiness.devolverLicenca(usuarioId, licencaCodigo);
             return new ResponseEntity<Void>(HttpStatus.NO_CONTENT);
